# Tinker_Json

./: .gitignore  .travis.yml  CMakeLists.txt  README.MD  main.cpp  test.cpp
header/: noob-constant.h  noob-context.h  noob-enum.h  noob-stack.h  noob-value.h  std-header.h
source/: CMakeLists.txt  TinkerAccessor.cpp  TinkerConstant.h  TinkerParser.cpp  TinkerPrettifier.cpp  TinkerStringifier.cpp  TinkerValue.cpp  TinkerValue.h  noob-accessor.cpp  noob-constant.h  noob-context.cpp  noob-parser.cpp  noob-prettifier.cpp  noob-stack.cpp  noob-stringifier.cpp  noob-value.cpp  noob-value.h  test-function.cpp
test/: simple.json
